--- a/Web/index.html
+++ b/Web/index.html
@@ -67,7 +67,7 @@
 		}
 		
 		.books_offscreen {
-			transform: translateX(-400px);
+			transform: translateX(-100%);
 			transition: transform 0.3s;
 		}
 		
@@ -77,7 +77,7 @@
 		}
 
 		.details_offscreen {
-			transform: translateX(400px);
+			transform: translateX(100%);
 			transition: transform 0.3s;
 		}
 		
