Added placeholder hostname at top.

--- a/Web/index.html
+++ b/Web/index.html
@@ -157,6 +157,11 @@
 			height: 100%;
 		}
 		
+		#newpost_hostname {
+			text-decoration: none;
+			color: darkgray;
+		}
+		
 		#newpost_send {
 			text-decoration: none;
 			margin-right: 10px;
@@ -415,6 +420,8 @@
 			<a href="#" data-bs-toggle="offcanvas" data-bs-target="#newpost_pane" aria-controls="newpost_pane">
 				<svg fill="currentColor" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 50 50" width="30px" height="30px"><path d="M 15.125 12.28125 L 12.28125 15.125 L 22.21875 25 L 12.28125 34.875 L 15.125 37.71875 L 25.0625 27.84375 L 35 37.71875 L 37.8125 34.875 L 27.90625 25 L 37.8125 15.125 L 35 12.28125 L 25.0625 22.15625 Z"/></svg>
 			</a>
+			
+			<a href="#" id="newpost_hostname">www.manton.org</a>
 			
 			<a href="#" id="newpost_send">Post</a>
 			
