Tweaked a few things.

--- a/Web/index.html
+++ b/Web/index.html
@@ -36,6 +36,10 @@
 			background-color: #e6e6e6;
 		}
 
+		.btn:hover {
+			background-color: #cccccc;
+		}
+
 		#alert_error {
 			margin-top: 75px;
 			display: none;
@@ -171,9 +175,9 @@
 		}
 		
 		#newpost_text {
-			margin-top: 75px;
-			margin-left: 15px;
-			margin-right: 15px;
+			margin-top: 70px;
+			padding-left: 14px;
+			padding-right: 14px;
 			border: 0;
 			width: 95%;
 			height: 400px;
@@ -396,6 +400,9 @@
 
 			setupNewPost();
 		}
+	
+		document.addEventListener("DOMContentLoaded", function() {			
+		});
 	
 	</script>
 </head>
