Fixed hover/focus for buttons.

--- a/Web/index.html
+++ b/Web/index.html
@@ -32,14 +32,18 @@
 		}
 
 		.btn:focus {
+			box-shadow: none !important;			
+		}
+
+		.btn-light:focus {
 			box-shadow: none !important;
 			background-color: #e6e6e6;
 		}
 
-		.btn:hover {
+		.btn-light:hover {
 			background-color: #cccccc;
 		}
-
+		
 		#alert_error {
 			margin-top: 75px;
 			display: none;
