Added navbar to sign-in screen.

--- a/Web/signin.html
+++ b/Web/signin.html
@@ -9,6 +9,16 @@
 
 	<style>
 
+		nav {
+			border-bottom: 1px solid lightgray;
+			height: 60px;
+			font-weight: bold;
+		}
+
+		.container {
+			margin-top: 75px;
+		}
+
 		.form-control:focus { 
 			border-color: darkgray !important;
 			box-shadow: none !important;
@@ -83,6 +93,16 @@
 	</script>
 </head>
 <body>
+
+<nav class="navbar fixed-top navbar-light bg-light">
+
+	<div class="container-fluid">
+		<div></div>
+		<div>Epilogue</div>
+		<div></div>			
+	</div>
+
+</nav>
 
 <div class="container">
 
