Fixed scrolling of details.

--- a/Web/index.html
+++ b/Web/index.html
@@ -126,7 +126,7 @@
 		}
 		
 		#details_screen {
-			position: absolute;
+			position: fixed;
 			top: 75px;
 			display: none;
 			text-align: center;
