--- a/Web/index.html
+++ b/Web/index.html
@@ -255,7 +255,7 @@
 		}
 
 		function selectBookshelf(bookshelf_id) {
-			if (document.epilogueSearchResults.length > 0) {
+			if (document.epilogueSelectedResult != null) {
 				let form = new FormData();
 				form.append("isbn", document.epilogueSelectedResult.isbn);
 				form.append("title", document.epilogueSelectedResult.title);
@@ -271,6 +271,8 @@
 				};
 
 				fetch("https://micro.blog/books", options).then(response => response.json()).then(data => {
+					// hide the bookshelves pane
+					document.getElementById("nav_bookshelf").click();
 				});
 			}
 			else {
@@ -540,12 +542,29 @@
 		}
 		
 		function selectSearchResult(result_index) {
-			let item = document.epilogueSearchResults[result_index];
+			let item = document.epilogueSearchResults[result_index];			
+			let isbns = item.volumeInfo.industryIdentifiers;
+			var best_isbn = "";
+			for (let i = 0; i < isbns.length; i++) {
+				let isbn = isbns[i];
+				if (isbn.type == "ISBN_13") {
+					best_isbn = isbn.identifier;
+					break;
+				}
+				else if (isbn.type == "ISBN_10") {
+					best_isbn = isbn.identifier;
+				}
+			}
+			
 			document.epilogueSelectedResult = {
-				isbn: item.volumeInfo.isbn13,
+				isbn: best_isbn,
 				title: item.volumeInfo.title,
 				author: item.volumeInfo.authors[0]
 			};
+		}
+	
+		function clearSelectedResult() {
+			document.epilogueSelectedResult = null;
 		}
 	
 		function showProfile() {
@@ -582,7 +601,7 @@
 			<svg fill="currentColor" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 30 30" width="30px" height="30px"><path d="M 19.980469 3.9902344 A 1.0001 1.0001 0 0 0 19.292969 4.2929688 L 9.2929688 14.292969 A 1.0001 1.0001 0 0 0 9.2929688 15.707031 L 19.292969 25.707031 A 1.0001 1.0001 0 1 0 20.707031 24.292969 L 11.414062 15 L 20.707031 5.7070312 A 1.0001 1.0001 0 0 0 19.980469 3.9902344 z"/></svg>
 		</a>			
 		
-		<a href="#" class="btn" id="nav_bookshelf" data-bs-toggle="offcanvas" data-bs-target="#bookshelves_pane" aria-controls="bookshelves_pane">
+		<a href="#" class="btn" id="nav_bookshelf" data-bs-toggle="offcanvas" data-bs-target="#bookshelves_pane" aria-controls="bookshelves_pane" onClick="clearSelectedResult();">
 			<svg fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" width="30px" height="30px"><path d="M 7 3 C 5.343 3 4 4.343 4 6 L 4 19 A 1.0001 1.0001 0 0 0 4.2949219 19.708984 C 4.6477556 20.972969 5.6303589 22 7 22 L 9 22 L 9 20 L 7 20 C 6.4349698 20 6 19.56503 6 19 C 6 18.542696 6.2910232 18.183861 6.6992188 18.058594 L 9 18.25 L 9 10 C 9 7.791 10.791 6 13 6 L 20 6 L 20 5 C 20 3.895 19.105 3 18 3 L 7 3 z M 14 8 C 12.343 8 11 9.343 11 11 L 11 24 A 1.0001 1.0001 0 0 0 11.294922 24.708984 C 11.647756 25.972969 12.630359 27 14 27 L 26 27 A 1.0001 1.0001 0 1 0 26 25 L 14 25 C 13.43497 25 13 24.56503 13 24 C 13 23.43497 13.43497 23 14 23 L 25 23 C 26.105 23 27 22.105 27 21 L 27 10 C 27 8.895 26.105 8 25 8 L 14 8 z M 16 12 L 22 12 C 22.552 12 23 12.448 23 13 C 23 13.552 22.552 14 22 14 L 16 14 C 15.448 14 15 13.552 15 13 C 15 12.448 15.448 12 16 12 z"/></svg>
 			<span id="nav_bookshelf_title"></span>
 		</a>
