After adding, reload bookshelf.

--- a/Web/index.html
+++ b/Web/index.html
@@ -272,8 +272,7 @@
 				};
 
 				fetch("https://micro.blog/books", options).then(response => response.json()).then(data => {
-					// hide the bookshelves pane
-					document.getElementById("nav_bookshelf").click();
+					loadBookshelf(bookshelf_id);
 				});
 			}
 			else {
