Fixed reloading bookshelf when backspace over search.

--- a/Web/index.html
+++ b/Web/index.html
@@ -580,6 +580,9 @@
 			if (s.length > 0) {
 				sendSearch(s);
 			}
+			else {
+				loadBooks(document.epilogueCurrentBookshelf.id);				
+			}
 		}
 	
 		function editBook() {			
